--- a/02-lab-culture-philosophy.qmd
+++ b/02-lab-culture-philosophy.qmd
@@ -1,6 +1,6 @@
-# Lab culture and philosophy {#culture}
+# Team culture and philosophy {#culture}
 
-We approach our science with a common denominator of kindness. As part of our core lab culture, we:  
+We approach our science with a common denominator of kindness. As part of our core team culture, we:  
 
 * __Ask for help, and share our learning__
 * __Make ourselves available__
@@ -13,15 +13,15 @@ We approach our science with a common denominator of kindness. As part of our co
 * __Foster inclusivity within our group and greater community__
 * __Promote and sustain healthy work-life integration__
 * __Practice radical candor__
-* __Acknowledge and give credit to other lab member’s work__ 
+* __Acknowledge and give credit to other member’s work__ 
 
 Though we do not expect incoming members to memorize everything, we do expect members to be aware of the group’s values.  
 
-**Ask for help, and share your learning:** We are all learners, and most of our learning is done from each other. It is inefficient to struggle through problems alone. Ask for and give assistance with appropriate cognizance of the value of your time and the time of the person you are asking. You are not the first or last person to encounter a problem. When you identify a problem add an issue to the [lab issues repository](www.github.com/thefaylab/lab-chat), and update it with solutions when it is resolved. Also consider writing a tutorial/blog post for inclusion in our [lab’s shared resources](www.github.com/thefaylab/labhub), and share with the larger community by tweeting, leading and sharing at a lab meeting, or running a workshop (Quantfish woRkshop group, SouthCoast useR group, etc).  
+**Ask for help, and share your learning:** We are all learners, and most of our learning is done from each other. It is inefficient to struggle through problems alone. Ask for and give assistance with appropriate cognizance of the value of your time and the time of the person you are asking. You are not the first or last person to encounter a problem. When you identify a problem add an issue to the MS DS teams chat, and update it with solutions when it is resolved. Also consider writing a tutorial/blog post and share with the larger community by tweeting, leading and sharing at a business meeting, or running a workshop (useR group, etc).  
 
-**Make yourself available:** Be responsive to communication, and make time for things that address longer term goals, even when busy. For example, do not skip on things like attending seminars just because you have a big deadline looming (see note below on planning and organization). Note that being available does not mean that you are available 24/7 - this is not expected. Because as a group we value the role of collaboration and interaction in improving our work, it is expected that you be available in the lab/office during normal business hours for some time during the week (see section on attendance expectations).  
+**Make yourself available:** Be responsive to communication, and make time for things that address longer term goals, even when busy. For example, do not skip on things like attending meetings just because you have a big deadline looming (see note below on planning and organization). Note that being available does not mean that you are available 24/7 - this is not expected. Because as a group we value the role of collaboration and interaction in improving our work, it is expected that you be available during normal business hours for some time during the week (see section on attendance expectations).  
 
-**Come prepared and be engaged:** Value your time. Be present during lab and individual meetings, and come to your work ready to do your work. Contribute and participate in planning and lab discussions. When it is your turn to run a meeting, come with an agenda and be prepared with questions. Aim to view meetings as events that contribute to your work and productivity, rather than taking away from them.  
+**Come prepared and be engaged:** Value your time. Be present during team and individual meetings, and come to your work ready to do your work. Contribute and participate in planning and discussions. When it is your turn to run a meeting, come with an agenda and be prepared with questions. Aim to view meetings as events that contribute to your work and productivity, rather than taking away from them.  
 
 **Celebrate accomplishments (yours & others):** You and your colleagues work hard. Things don’t always go exactly as you plan. Be supportive and proud of yourself and your peers when you accomplish things. We are not competing with each other - someone else’s success does not mean your failure. Share your accomplishments with others!  
 
@@ -33,9 +33,9 @@ Though we do not expect incoming members to memorize everything, we do expect me
 
 **Plan with intention, and follow through:** Be organized and adaptable. Things don’t always go as planned and that’s OK. Planning can help you adapt when they don’t (see Come Prepared). Find a program/project management approach that works for you (see “How we work”); being organized can reduce stress immensely and help you progress with your goals.  
 
-**Foster inclusivity within our group and greater community:** Part of our lab culture is that we are good citizens of our community, we take on leadership roles within SMAST and the University, we are supportive of others in our community during their milestones, we actively participate in SMAST events (e.g. the IMS graduate research symposium) and perform outreach. Work with Gavin when crafting your individual mentoring/development plans (see Chapter on Onboarding) to identify what you want to aim your efforts at.  
+**Foster inclusivity within our group and greater community:** Part of our team culture is that we are good citizens of our community, we take on leadership roles within the organization, we are supportive of others in our business during their milestones, we actively participate in company events (e.g. MBR, rad retreat) and perform outreach. 
 
-**Promote and sustain healthy work-life integration:** Our scientific research is not the only important thing in our lives, and publishing research is not the only mechanism by which to provide science and support our communities. We recognize the importance of our other commitments in keeping us healthy (mentally and physically) and bring our whole selves to our efforts. Try not to normalize overwork or being busy as achievement or status.  
+**Promote and sustain healthy work-life integration:** Our work is not the only important thing in our lives, and adding business value is not the only mechanism by which to provide support to our communities. We recognize the importance of our other commitments in keeping us healthy (mentally and physically) and bring our whole selves to our efforts. Try not to normalize overwork or being busy as achievement or status.  
 
 **Practice radical candor:** We [care personally while also challenging directly](https://www.radicalcandor.com/). Be honest when communicating, accept critical (but kind) feedback, and give the same to others. View relationships within the group as collaborative rather than evaluative. Don’t take constructive criticism personally.  
 
